package observer_pattern.TopicCA4;

public interface TopicListener {
    public void listen(TinTuc t);
}
