@startuml
'https://plantuml.com/class-diagram

class Topic{
    -List<TinTuc> list
    +void dangKy(TopicListener listener)
    +void huyDangKy(TopicListener listener)
    +void themMoi(TinTuc t)
    +void capNhat(TinTuc t)
}
interface TopicListener{
    +void listen(TinTuc t)
}
class ThanhVienA
class ThanhVienB
TopicListener <|.. ThanhVienA
TopicListener <|.. ThanhVienB
Topic o--> TopicListener : listener
ThanhVienA --> Topic : topic
ThanhVienB --> Topic : topic
@enduml